# jianzhi_offer

./: README.md  \
03.数组中重复的数字/: .CMakeLists.txt.swp  CMakeLists.txt  main.c
04.二维数组中的查找/: CMakeLists.txt  main.c  topic
05.替换空格/: main.c  topic
06.从尾到头打印链表/: main.c
07.重建二叉树/: main.c  topic
09.用两个栈实现队列/: main.c
10-I.斐波那契数列/: main.c  topic
10-II.青蛙跳台阶问题/: .main.c.swp  main.c  topic
11.旋转数组的最小数字/: .main.c.swp  main.c
12.矩阵中的路径/: topic
13.机器人的运动范围/: topic
14-I.剪绳子/: topic
14-II.剪绳子/: topic
15.二进制中1的个数/: main.c  topic
16.数值的整数次方/: topic
17.打印从1到最大的n位数/: main.c
18.删除链表的节点/: main.c
19.正则表达式匹配/: main.c  topic
20.表示数值的字符串/: topic
21.调整数组顺序使奇数位于偶数前面/: main.c  topic
22.链表中倒数第k个节点/: main.c  topic
24.反转链表/: main.c
25.合并两个排序的链表/: main.c
26.树的子结构/: main.c  topic
27.二叉树的镜像/: .main.c.swp  main.c  topic
28.对称的二叉树/: main.c  topic
30.包含min函数的栈/: main.c  topic
31.栈的压入弹出序列/: main.c  topic
32-I.从上到下打印二叉树/: main.c  topic
32-II.从上到下打印二叉树II/: main.c  topic
32-III.从上到下打印二叉树III/: main.c  topic
33.二叉搜索树的后序遍历序列/: main.c  topic
34.二叉树中和为某一值的路径/: main.c  topic
35.复杂链表的复制/: main.c  topic
36.二叉搜索树与双向链表/: main.c  topic
37.序列化二叉树/: main.c  topic
38.字符串的排列/: main.c  topic
39.数组中出现次数超过一半的数字/: main.c  topic
40.最小的k个数/: .main.c.swp  main.c  topic
41.数据流中的中位数/: main.c  topic
42.连续子数组的最大和/: main.c  topic
43.1～n整数中1出现的次数/: main.c  topic
44.数字序列中某一位的数字/: main.c  topic
45.把数组排成最小的数/: main.c  topic
46.把数字翻译成字符串/: main.c  topic
47.礼物的最大价值/: main.c  topic
48.最长不含重复字符的子字符串/: main.c  topic
49.丑数/: main.c  topic
sample/: topic
(+63 files in other folders)
